--- a/src/index.html
+++ b/src/index.html
@@ -3,328 +3,131 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>@tailwindcss/forms examples</title>
+  <title>SAMSUNG</title>
   <link rel="stylesheet" href="/css/app.css" />
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
 </head>
 
 <body>
-  <div class="antialiased text-gray-900 px-6">
-    <div class="max-w-xl mx-auto py-12 divide-y md:max-w-4xl">
-      <div class="py-8">
-        <h1 class="text-4xl font-bold">@tailwindcss/forms examples</h1>
-        <p class="mt-2 text-lg text-gray-600">
-          An opinionated form reset designed to make form elements easy to style with utility
-          classes.
-        </p>
-        <div class="mt-4 flex space-x-4">
-          <a class="text-lg underline" href="https://github.com/tailwindlabs/tailwindcss-forms">Documentation</a>
-          <a class="text-lg underline" href="/kitchen-sink.html">Kitchen Sink</a>
+  <div class="antialiased  desktop:px-6 h-screen w-screen">
+    <div class="desktop:w-container desktop:m-auto w-screen overflow-hidden">
+      <div class="desktop:h-cHeight flex justify-around desktop:w-full w-screen font-one">
+        <div class="w-navLeft  flex items-center ">
+          <div class="w-logo">SAMSUNG</div>
+          <ul class="flex ">
+            <li class="mr-pad ">Mobile</li>
+            <li class="mr-pad">TV & AV</li>
+            <li class="mr-pad">Elettrodomestici</li>
+            <li class="mr-pad">Informatica</li>
+            <li class="mr-pad">Display</li>
+            <li class="mr-pad">Accessori</li>
+            <li class="mr-pad">Offerte</li>
+            <li class="mr-pad">#YouMake</li>
+          </ul>
+        </div>
+        <div class="w-navRight  flex items-center justify-around">
+          <ul class="flex ">
+            <li class="mr-pad">Supporto</li>
+            <li class="mr-pad">Per il business</li>
+          </ul>
+          <ul class="flex ">
+            <li class="mr-pad">w</li>
+            <li class="mr-pad">w</li>
+            <li class="mr-pad">w</li>
+          </ul>
         </div>
       </div>
-      <div class="py-12">
-        <h2 class="text-2xl font-bold">Unstyled</h2>
-        <p class="mt-2 text-lg text-gray-600">This is how form elements look out of the box.</p>
-        <div class="mt-8 max-w-md">
-          <div class="grid grid-cols-1 gap-6">
-            <label class="block">
-              <span class="text-gray-700">Full name</span>
-              <input type="text" class="mt-1 block w-full" placeholder="" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Email address</span>
-              <input type="email" class="mt-1 block w-full" placeholder="john@example.com" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">When is your event?</span>
-              <input type="date" class="mt-1 block w-full" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">What type of event is it?</span>
-              <select class="block w-full mt-1">
-                <option>Corporate event</option>
-                <option>Wedding</option>
-                <option>Birthday</option>
-                <option>Other</option>
-              </select>
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Additional details</span>
-              <textarea class="mt-1 block w-full" rows="3"></textarea>
-            </label>
-            <div class="block">
-              <div class="mt-2">
-                <div>
-                  <label class="inline-flex items-center">
-                    <input type="checkbox" checked />
-                    <span class="ml-2">Email me news and special offers</span>
-                  </label>
-                </div>
-              </div>
-            </div>
+      <div
+        class="desktop:h-herobg h-heroh w-full bg-[url('/static/hero.webp')] bg-cover flex justify-center items-center desktop:relative">
+        <div class=" w-herotxt h-herotxth desktop:absolute top-24 left-20 text-center desktop:text-left">
+          <h1 class="desktop:text-5xl text-xl font-bold ">BESPOKE Home</h1>
+          <p class="pt-6 pb-11 text-xs px-16 desktop:px-0 desktop:text-lg ">Esprimi la tua personalità con la linea di
+            elettrodomestici BESPOKE.
+            Scopri le esclusive promozioni su una selezione di prodotti.
+            In più fino al 6 Novembre, se acquisti la nuova Lavatrice BESPOKE AI™,
+            ricevi una scopa elettrica Samsung Jet™.</p>
+          <a href="#" class="text-sm bg-black text-white p-4 rounded-full">Scopri BESPOKE Home</a>
+        </div>
+      </div>‚
+      <div
+        class="w-11/12 h-52  m-auto mt-24 flex gap-4 text-white text-sm mb-24 flex-col desktop:flex-row  desktop:h-ctxh">
+        <div class="h-full w-ctxw bg-[url('/static/was.webp')] bg-cover rounded-lg flex justify-center items-end ">
+          <div class="w-72 h-24 text-center mb-12">
+            <h2 class="text-2xl mb-8">Lavatrici BESPOKE AI 11kg</h2>
+            <p>Più capacità. Meno consumi.
+              Acquista Bespoke AI 11 Kg e ricevi SamsungJet</p>
+          </div>
+        </div>
+        <div class="h-full w-ctxw bg-[url('/static/arm.webp')] bg-cover rounded-lg flex justify-center items-end">
+          <div class="w-72 h-24 text-center mb-12">
+            <h2 class="text-2xl mb-8">Lavatrici BESPOKE AI 11kg</h2>
+            <p>Più capacità. Meno consumi.
+              Acquista Bespoke AI 11 Kg e ricevi SamsungJet</p>
+          </div>
+        </div>
+        <div class="h-full w-ctxw bg-[url('/static/asp.webp')] bg-cover rounded-lg flex justify-center items-end">
+          <div class="w-72 h-24 text-center mb-12">
+            <h2 class="text-2xl mb-8">Lavatrici BESPOKE AI 11kg</h2>
+            <p>Più capacità. Meno consumi.
+              Acquista Bespoke AI 11 Kg e ricevi SamsungJet</p>
           </div>
         </div>
       </div>
-      <div class="py-12">
-        <h2 class="text-2xl font-bold">Simple</h2>
-        <div class="mt-8 max-w-md">
-          <div class="grid grid-cols-1 gap-6">
-            <label class="block">
-              <span class="text-gray-700">Full name</span>
-              <input type="text" class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    border-gray-300
-                    shadow-sm
-                    focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
-                  " placeholder="" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Email address</span>
-              <input type="email" class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    border-gray-300
-                    shadow-sm
-                    focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
-                  " placeholder="john@example.com" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">When is your event?</span>
-              <input type="date" class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    border-gray-300
-                    shadow-sm
-                    focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
-                  " />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">What type of event is it?</span>
-              <select class="
-                    block
-                    w-full
-                    mt-1
-                    rounded-md
-                    border-gray-300
-                    shadow-sm
-                    focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
-                  ">
-                <option>Corporate event</option>
-                <option>Wedding</option>
-                <option>Birthday</option>
-                <option>Other</option>
-              </select>
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Additional details</span>
-              <textarea class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    border-gray-300
-                    shadow-sm
-                    focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
-                  " rows="3"></textarea>
-            </label>
-            <div class="block">
-              <div class="mt-2">
-                <div>
-                  <label class="inline-flex items-center">
-                    <input type="checkbox" class="
-                          rounded
-                          border-gray-300
-                          text-indigo-600
-                          shadow-sm
-                          focus:border-indigo-300
-                          focus:ring
-                          focus:ring-offset-0
-                          focus:ring-indigo-200
-                          focus:ring-opacity-50
-                        " checked />
-                    <span class="ml-2">Email me news and special offers</span>
-                  </label>
-                </div>
-              </div>
+      <h2 class="text-3xl text-center font-bold mb-24">Le offerte dello shop</h2>
+      <ul class="h-6 w-lastmenu  m-auto flex justify-between text-lg font-bold mb-3.5">
+        <li>Le migliori offerte</li>
+        <li>Smartphone & wearable</li>
+        <li>Tablet & computing</li>
+        <li>TV e Audio</li>
+        <li>Elettrodomestici</li>
+        <li>Informatica</li>
+      </ul>
+
+
+      <div class=" w-lastsectionw   m-auto flex gap-4 flex-col  desktop:h-lastsectionh desktop:flex-row">
+        <div class=" w-lsfirstchildw h-lastsectionh  flex flex-col justify-between ">
+          <div
+            class=" w-full h-lsfirstchildw bg-cyan-600 rounded-lg bg-[url('/static/tvf.jpeg')] bg-cover text-center flex items-end justify-center">
+            <div class=" mb-6 ">
+              <h2 class="font-bold mb-3">Extra sconto YOUMAKE su Tv</h2>
+              <p>Valido fino al 23/10</p>
+            </div>
+          </div>
+          <div
+            class=" w-full h-lsfirstchildw bg-cyan-600 rounded-lg bg-[url('/static/lav.webp')] bg-cover text-center flex items-end justify-center">
+
+            <div class=" mb-6 ">
+              <h2 class="font-bold mb-3">Extra sconto YOUMAKE su Tv</h2>
+              <p>Valido fino al 23/10</p>
             </div>
           </div>
         </div>
-      </div>
-      <div class="py-12">
-        <h2 class="text-2xl font-bold">Underline</h2>
-        <div class="mt-8 max-w-md">
-          <div class="grid grid-cols-1 gap-6">
-            <label class="block">
-              <span class="text-gray-700">Full name</span>
-              <input type="text" class="
-                    mt-0
-                    block
-                    w-full
-                    px-0.5
-                    border-0 border-b-2 border-gray-200
-                    focus:ring-0 focus:border-black
-                  " placeholder="" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Email address</span>
-              <input type="email" class="
-                    mt-0
-                    block
-                    w-full
-                    px-0.5
-                    border-0 border-b-2 border-gray-200
-                    focus:ring-0 focus:border-black
-                  " placeholder="john@example.com" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">When is your event?</span>
-              <input type="date" class="
-                    mt-0
-                    block
-                    w-full
-                    px-0.5
-                    border-0 border-b-2 border-gray-200
-                    focus:ring-0 focus:border-black
-                  " />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">What type of event is it?</span>
-              <select class="
-                    block
-                    w-full
-                    mt-0
-                    px-0.5
-                    border-0 border-b-2 border-gray-200
-                    focus:ring-0 focus:border-black
-                  ">
-                <option>Corporate event</option>
-                <option>Wedding</option>
-                <option>Birthday</option>
-                <option>Other</option>
-              </select>
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Additional details</span>
-              <textarea class="
-                    mt-0
-                    block
-                    w-full
-                    px-0.5
-                    border-0 border-b-2 border-gray-200
-                    focus:ring-0 focus:border-black
-                  " rows="2"></textarea>
-            </label>
-            <div class="block">
-              <div class="mt-2">
-                <div>
-                  <label class="inline-flex items-center">
-                    <input type="checkbox" class="
-                          border-gray-300 border-2
-                          text-black
-                          focus:border-gray-300 focus:ring-black
-                        " />
-                    <span class="ml-2">Email me news and special offers</span>
-                  </label>
-                </div>
-              </div>
-            </div>
+
+        <div
+          class=" w-lastsectionh h-lastsectionh rounded-lg bg-[url('/static/big.webp')] bg-cover text-center flex items-end justify-center">
+          <div class=" mb-6 ">
+            <h2 class="font-bold mb-3 text-3xl">Segui le tu passioni con YOUMAKE</h2>
+            <p class="text-lg">Acquisa 2 prodotti, ricevi il 15%</p>
           </div>
+
         </div>
-      </div>
-      <div class="py-12">
-        <h2 class="text-2xl font-bold">Solid</h2>
-        <div class="mt-8 max-w-md">
-          <div class="grid grid-cols-1 gap-6">
-            <label class="block">
-              <span class="text-gray-700">Full name</span>
-              <input type="text" class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    bg-gray-100
-                    border-transparent
-                    focus:border-gray-500 focus:bg-white focus:ring-0
-                  " placeholder="" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Email address</span>
-              <input type="email" class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    bg-gray-100
-                    border-transparent
-                    focus:border-gray-500 focus:bg-white focus:ring-0
-                  " placeholder="john@example.com" />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">When is your event?</span>
-              <input type="date" class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    bg-gray-100
-                    border-transparent
-                    focus:border-gray-500 focus:bg-white focus:ring-0
-                  " />
-            </label>
-            <label class="block">
-              <span class="text-gray-700">What type of event is it?</span>
-              <select class="
-                    block
-                    w-full
-                    mt-1
-                    rounded-md
-                    bg-gray-100
-                    border-transparent
-                    focus:border-gray-500 focus:bg-white focus:ring-0
-                  ">
-                <option>Corporate event</option>
-                <option>Wedding</option>
-                <option>Birthday</option>
-                <option>Other</option>
-              </select>
-            </label>
-            <label class="block">
-              <span class="text-gray-700">Additional details</span>
-              <textarea class="
-                    mt-1
-                    block
-                    w-full
-                    rounded-md
-                    bg-gray-100
-                    border-transparent
-                    focus:border-gray-500 focus:bg-white focus:ring-0
-                  " rows="3"></textarea>
-            </label>
-            <div class="block">
-              <div class="mt-2">
-                <div>
-                  <label class="inline-flex items-center">
-                    <input type="checkbox" class="
-                          rounded
-                          bg-gray-200
-                          border-transparent
-                          focus:border-transparent focus:bg-gray-200
-                          text-gray-700
-                          focus:ring-1 focus:ring-offset-2 focus:ring-gray-500
-                        " />
-                    <span class="ml-2">Email me news and special offers</span>
-                  </label>
-                </div>
-              </div>
+
+        <div class=" w-lsfirstchildw h-lastsectionh  flex flex-col justify-between">
+          <div
+            class=" w-full h-lsfirstchildw bg-cyan-600 rounded-lg bg-[url('/static/tel.webp')] bg-cover text-center flex items-end justify-center ">
+            <div class=" mb-6 ">
+              <h2 class="font-bold mb-3">Extra sconto YOUMAKE su Tv</h2>
+              <p>Valido fino al 23/10</p>
             </div>
           </div>
+          <div
+            class=" w-full h-lsfirstchildw bg-cyan-600 rounded-lg bg-[url('/static/tv.webp')] bg-cover text-center flex items-end justify-center">
+            <div class=" mb-6 ">
+              <h2 class="font-bold mb-3">Extra sconto YOUMAKE su Tv</h2>
+              <p>Valido fino al 23/10</p>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
